--- a/core/pom.xml
+++ b/core/pom.xml
@@ -125,6 +125,12 @@
             <artifactId>cq-wcm-core</artifactId>
             <version>5.6.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.osgi</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        
     </dependencies>
 
 
