--- a/core/pom.xml
+++ b/core/pom.xml
@@ -130,6 +130,11 @@
             <artifactId>org.apache.sling.commons.osgi</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.6</version>
+        </dependency>
 
     </dependencies>
 
