--- a/core/pom.xml
+++ b/core/pom.xml
@@ -108,6 +108,16 @@
             <artifactId>org.apache.sling.jcr.api</artifactId>
             <version>2.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.servlets.post</artifactId>
+            <version>2.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.json</artifactId>
+            <version>2.0.10</version>
+        </dependency>
         <!-- JCR -->
         <dependency>
             <groupId>org.apache.jackrabbit</groupId>
@@ -122,14 +132,19 @@
         <!-- AEM -->
         <dependency>
             <groupId>com.day.cq.wcm</groupId>
-            <artifactId>cq-wcm-api</artifactId>
-            <version>5.1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.day.cq.wcm</groupId>
             <artifactId>cq-wcm-core</artifactId>
             <version>5.1.6</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.day.cq.wcm</groupId>
+            <artifactId>cq-wcm-api</artifactId>
+            <version>5.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.day.cq</groupId>
+            <artifactId>cq-commons</artifactId>
+            <version>5.7.12</version>
         </dependency>
 
     </dependencies>
