--- a/core/pom.xml
+++ b/core/pom.xml
@@ -45,6 +45,7 @@
                         <Bundle-Vendor>${project.parent.organization.name}</Bundle-Vendor>
                         <Export-Package>com.icfi.aem.componentlock.*</Export-Package>
                         <Sling-Model-Packages>com.icfi.aem.componentlock</Sling-Model-Packages>
+                        <Import-Package>org.apache.sling.api.resource;version="[2.5,3.0)"</Import-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
