--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>component-lock</artifactId>
-        <groupId>com.icfi.aem</groupId>
+        <artifactId>componentlock</artifactId>
+        <groupId>com.icfi.aem.componentlock</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -127,9 +127,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.icfi.aem</groupId>
+            <groupId>com.icfi.aem.componentlock</groupId>
             <artifactId>component-lock-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 </project>
